Add rules for processing text and markdown files

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -15,5 +15,9 @@ crons = ["*/2 * * * *", "*/1 * * * *"]
 [vars]
 NODE_ENV = "production"
 
+[[rules]]
+type = "Text"
+globs = ["**/*.txt", "**/*.md"]
+
 [observability]
 enabled = true
